Fixed descenders getting truncated in current user status bar.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1561,6 +1561,7 @@ home-modal-inner-width = home-modal-width - 2 * home-modal-horiz-padding
     max-width room-sidebar-width - 120px // Subtract the width of the avatar and settings.
     overflow ellipsis
     font-size 12px
+    line-height 1.2
 
   .username
     padding-top 8px
